# shlevy

./: .gitignore  CapIO.hs  LICENSE  cabal.project  flake.nix  fourmolu.yaml
abstractly-keyed-implicits/: CHANGELOG.md  abstractly-keyed-implicits.cabal
abstractly-keyed-implicits/Data/: Implicit.hs
capio/: CapIO.hs  Test.hs  capio-typesafe.tix  capio.cabal
capio-trustworthy/: capio-trustworthy.cabal
capio-trustworthy/CapIO/: Trustworthy.hs
capio/CapIO/: Internal.hs
capio/capabilities/CapIO/: Capabilities.hs
capio/capability-core-data-only/CapIO/Capability/: Core.hs
capio/capability-core-typesafe/CapIO/Capability/: Core.hs
capio/capability/CapIO/: Capability.hs
capio/capability/CapIO/Capability/: Core.hsig
capio/core-signature/CapIO/: Core.hsig
capio/core-synonym/CapIO/: Core.hs
capio/core-typesafe/CapIO/: Core.hs
capio/hascap/CapIO/: HasCap.hs
capio/io/CapIO/: Core.hs
capio/lib/: CapIO.hs
capio/lib/CapIO/: Core.hsig
capio/prelim/CapIO/: Prelim.hs  Trustworthy.hs
capio/prelim/CapIO/Capability/: Types.hs
capio/prelim/Data/: VarFun.hs
capio/pure/CapIO/: Pure.hs
capio/signature/CapIO/: Core.hsig
capio/test/: Test.hs
capio/testlib/CapIO/: Test.hs
capio/types-sig/CapIO/: Types.hsig
capio/typesafe/CapIO/: CapST.hs  Core.hs
e11y/: Test.hs  e11y.cabal
e11y/Observe/: Event.hs
e11y/Observe/Event/: Core.hs  OpenTelemetry.hs
sig/: Char.hs  Example.hs  Sig.hs  String.hs  sig.cabal
sig/Char/: ASCII.hs  UTF.hs
sig/String/: List.hs  Text.hs
thinning-bug/: Module.hs  README.md  Signature.hsig  thinning-bug.cabal
thinning-bug/signature/: Signature.hsig
