cabal-version:      3.0
name:               abstractly-keyed-implicits
version:            0.1.0.0
synopsis:           Manage the implicit parameter namespace dynamically at compile time.
description:
   Manage the implicit parameter namespace dynamically at compile time.

   This is an implementation of [GHC proposal 737](https://github.com/ghc-proposals/ghc-proposals/pull/737).
   Relative to that proposal, this suffers from the following (likely hypothetical) limitations:

     * It may break if future GHC versions change the implementation of implicit parameters
     * It doesn't mandate that 'bindImplicit' and 'implicitParameter' be fully applied,
       nor guarantee that they don't impose additional runtime cost.
     * It uses some auxiliary internal type-level machinery that can't be hidden.
     * It is not inferred as safe Haskell (though it is safe).
homepage:           https://github.com/shlevy/shlevy/tree/master/abstractly-keyed-implicits
bug-reports:        https://github.com/shlevy/shlevy/issues
license:            Apache-2.0
license-file:       LICENSE
author:             Shea Levy
maintainer:         shea@shealevy.com
copyright:          Copyright 2025 Shea Levy
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == { 9.10.2, 9.12.2 }

source-repository head
  type:     git
  location: https://github.com/shlevy/shlevy
  subdir:   abstractly-keyed-implicits

library
    exposed-modules:  Data.Implicit
    build-depends:    base ^>= { 4.20, 4.21 }
    default-language: GHC2024
