cabal-version:   3.0
name:            capio
version:         0.1.0.0
license:         Apache-2.0
author:          Shea Levy
maintainer:      shea@shealevy.com
copyright:
  Copyright 2025 Shea Levy

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
category:        Observability
build-type:      Simple
tested-with:     GHC == { 9.10.2 }

library prelim
  exposed-modules: CapIO.Prelim
  hs-source-dirs: prelim
  build-depends: base
  default-language: GHC2024

library core-signature
  signatures: CapIO.Core
  hs-source-dirs: core-signature
  build-depends: base, capio:prelim
  default-language: GHC2024

library
  exposed-modules: CapIO
  hs-source-dirs: library
  build-depends: base, capio:prelim, capio:core-signature
  default-language: GHC2024

library core-synonym
  exposed-modules: CapIO.Core
  hs-source-dirs: core-synonym
  build-depends: base
  default-language: GHC2024

library core-typesafe
  exposed-modules: CapIO.Core
  hs-source-dirs: core-typesafe
  build-depends: base, capio:prelim
  default-language: GHC2024

library test
  exposed-modules: CapIO.Test
  hs-source-dirs: testlib
  default-language: GHC2024
  build-depends: base, capio

test-suite capio-synonym
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, capio:test, capio:core-synonym
  hs-source-dirs: test
  default-language: GHC2024

test-suite capio-typesafe
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, capio:test, capio:core-typesafe
  hs-source-dirs: test
  default-language: GHC2024
