cabal-version:   3.0
name:            capio
version:         0.1.0.0
license:         Apache-2.0
author:          Shea Levy
maintainer:      shea@shealevy.com
copyright:       Copyright 2025 Shea Levy
build-type:      Simple
tested-with:     GHC == { 9.10.2 }

common base
  build-depends: base
  default-language: GHC2024

library
  import: base
  hs-source-dirs: lib
  exposed-modules: CapIO
  signatures: CapIO.Core

library io
  import: base
  hs-source-dirs: io
  exposed-modules: CapIO.Core
  visibility: public

library typesafe
  import: base
  hs-source-dirs: typesafe
  exposed-modules: CapIO.Core
  visibility: public

library capio-io
  import: base
  reexported-modules: CapIO, CapIO.Core
  build-depends: capio, capio:io
  visibility: public

library capio-typesafe
  import: base
  reexported-modules: CapIO, CapIO.Core
  build-depends: capio, capio:typesafe
  visibility: public
