cabal-version:   3.0
name:            e11y
version:         0.2.0.0
license:         Apache-2.0
author:          Shea Levy
maintainer:      shea@shealevy.com
copyright:
  Copyright 2025 Shea Levy

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
category:        Observability
build-type:      Simple
tested-with:     GHC == { 9.10.2 }

library
  exposed-modules: Observe.Event

  build-depends:
    , base
    , capio ^>= { 0.1 }
    , abstractly-keyed-implicits ^>= { 0.1 }
    , time
    , constraints

  default-language: GHC2024

library otel
  exposed-modules: Observe.Event.OpenTelemetry
  visibility: public
  build-depends:
    , base
    , e11y
    , hs-opentelemetry-api

  default-language: GHC2024

test-suite e11y
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , capio
    , e11y
    , hspec
    , hspec-hedgehog
    , hedgehog
    , constraints
    , time

  default-language: GHC2024
