cabal-version:   3.4
name:            sig
version:         0.1.0.0
license:         Apache-2.0
author:          Shea Levy
maintainer:      shea@shealevy.com
copyright:       Copyright 2026 Shea Levy
build-type:      Simple
tested-with:     GHC == { 9.10.2 }

library
  build-depends: base
  default-language: GHC2024
  exposed-modules: Sig

executable example
  build-depends: base, sig, ascii-char, text
  default-language: GHC2024
  main-is: Example.hs
  other-modules:
    String, String.List, String.Text,
    Char, Char.UTF, Char.ASCII
